	  It appears that when setlocale() sets the locale to "" in the beginning
	  of main(), which is done for gettext translations, multi-byte ANSI is
	  printed wrongly. On windows we need to set the locale to "C" to make East-
	  Asian text printed correctly. On Unix setting the locale to "C" would
	  disable the gettext translations, but on Windows it keeps working.
	* test/cp936.c: New test program that proves that setlocale(LC_ALL, "")
	  breaks printf() on Windows for Chinese CP936 encoded text.
	* common.h, *.c: Created macro D2U_FPRINTF, for correct printing of text
	  when Unicode file names support is disabled.

2016-01-13 Erwin Waterlander <waterlan@xs4all.nl>
	* *.c: Use d2u_ansi_fprintf() for printing the help text, version
	  information and license. It appears that printing Chinese text
	  properly in a Windows Command Prompt in a Chinese regional setting
	  requires the Unicode method. I would expect that standard printf()
	  would work for ANSI CP936 encoded text. My tests show that I need to
	  use option "-D unicode" to get proper output. When I use the ansi method
	  I get wrong output, but when I redirect that to a text file, I get
	  proper CP936 output in the text file.

	  PS:
	  See change of 2016-01-16 above. The cause of the problem was setlocale().

2016-01-02 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Compilation for mingw, mingw32-w64, and mingw64-w64
	  works out of the box.
	* mingw*.mak: Deleted.

2015-12-27 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Manual update. Binary file detection is not
	  foolproof.
	* Moved Git repository:
	  git clone git://git.code.sf.net/p/dos2unix/dos2unix

2015-12-22 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Split DEBUG=1 into DEBUG=1 and DEBUGMSG=1.
	  DEBUG=1 will add option -g to CFLAGS for debugging with gdb.
	  DEBUGMSG=1 makes dos2unix print extra messages about accessing the
	  file system.